[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/TransmissionRay.gd" type="Script" id=1]
[ext_resource path="res://particle_curve_decrease.tres" type="Texture" id=2]
[ext_resource path="res://images/sound_particle.png" type="Texture" id=3]

[sub_resource type="ParticlesMaterial" id=1]

render_priority = 0
trail_divisor = 1
trail_size_modifier = ExtResource( 2 )
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 0.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.32
scale_curve = ExtResource( 2 )
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angular Velocity", "Emission Shape", "Flags", "Gravity", "Hue Variation", "Initial Velocity", "Linear Accel", "Orbit Velocity", "Radial Accel", "Scale", "Spread", "Trail" ]

[node name="TransmissionRay" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
transmissionPoints = PoolVector2Array(  )
transmissionFrom = Vector2( 0, 0 )
transmissionTo = Vector2( 100, 0 )

[node name="DirectionLine" type="Line2D" parent="." index="0"]

points = PoolVector2Array(  )
width = 5.0
default_color = Color( 0.4, 0.5, 1, 1 )
texture_mode = -1183937892
sharp_limit = 2.0
round_precision = 8

[node name="ParticleEmitter" type="Particles2D" parent="." index="1"]

emitting = true
amount = 100
lifetime = 10.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 1 )
texture = ExtResource( 3 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform" ]

[node name="DebugUi" type="VBoxContainer" parent="." index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 31.0
margin_top = 42.0
margin_right = 170.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="GridContainer" type="GridContainer" parent="DebugUi" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 147.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/hseparation = 10
columns = 2
_sections_unfolded = [ "custom_constants" ]

[node name="Label" type="Label" parent="DebugUi/GridContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1.0
margin_right = 37.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Count"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CountSlider" type="HSlider" parent="DebugUi/GridContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 47.0
margin_right = 147.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
size_flags_stretch_ratio = 1.01
min_value = 0.0
max_value = 50.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = true
editable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Label2" type="Label" parent="DebugUi/GridContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 21.0
margin_right = 37.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Time"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LifetimeSlider" type="HSlider" parent="DebugUi/GridContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 47.0
margin_top = 20.0
margin_right = 147.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[connection signal="value_changed" from="DebugUi/GridContainer/CountSlider" to="." method="_on_CountSlider_value_changed"]

[connection signal="value_changed" from="DebugUi/GridContainer/LifetimeSlider" to="." method="_on_LifetimeSlider_value_changed"]


